# autosim_yolo

./: CMakeLists.txt  README.md  package.xml
include/awsim_yolo/: awsim_yolo.hpp  awsim_yolo_node.hpp  visibility_control.hpp
launch/: awsim_yolo.launch.py
src/: awsim_yolo.cpp  awsim_yolo_node.cpp
test/: test_awsim_yolo.cpp
